// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PackageOutput/> should render \`h2\` and \`samp\` elements 1`] = `
<div>
  <h2>
    Output
  </h2>
  <pre
    className="PackageOutput"
  >
    <samp>
      "
      "
    </samp>
  </pre>
</div>
`;

exports[`<PackageOutput/> should render a sample output of a comma seperated list of package names from a string passed in 1`] = `
<div>
  <h2>
    Output
  </h2>
  <pre
    className="PackageOutput"
  >
    <samp>
      "
      KittenService, Ice, Cyberportal, Leetmeme, CamelCaser, Fraudstream
      "
    </samp>
  </pre>
</div>
`;
